--- a/q/272452.html
+++ b/q/272452.html
@@ -26,17 +26,36 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>108</td><td>R 4.1 and above</td><td>240410T113250Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272474#272474">Martin M</a></td></tr>
-<tr d-ix="1"><td>137</td><td>C gcc</td><td>240410T122625Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272475#272475">virolino</a></td></tr>
-<tr d-ix="2"><td>096</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
-<tr d-ix="3"><td>079</td><td>APL+WIN</td><td>240410T110718Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272471#272471">Graham</a></td></tr>
-<tr d-ix="4"><td>031</td><td>Charcoal</td><td>240410T112504Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272473#272473">Neil</a></td></tr>
-<tr d-ix="5"><td>087</td><td>sed E</td><td>240410T105512Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272470#272470">Philippo</a></td></tr>
-<tr d-ix="6"><td>026</td><td>05AB1E</td><td>240410T082537Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272466#272466">Kevin Cr</a></td></tr>
-<tr d-ix="7"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
-<tr d-ix="8"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
+<tr d-ix="0"><td>018</td><td>Jelly</td><td>240410T132624Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272476#272476">Jonathan</a></td></tr>
+<tr d-ix="1"><td>108</td><td>R 4.1 and above</td><td>240410T113250Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272474#272474">Martin M</a></td></tr>
+<tr d-ix="2"><td>137</td><td>C gcc</td><td>240410T122625Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272475#272475">virolino</a></td></tr>
+<tr d-ix="3"><td>096</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
+<tr d-ix="4"><td>079</td><td>APL+WIN</td><td>240410T110718Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272471#272471">Graham</a></td></tr>
+<tr d-ix="5"><td>031</td><td>Charcoal</td><td>240410T112504Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272473#272473">Neil</a></td></tr>
+<tr d-ix="6"><td>087</td><td>sed E</td><td>240410T105512Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272470#272470">Philippo</a></td></tr>
+<tr d-ix="7"><td>026</td><td>05AB1E</td><td>240410T082537Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272466#272466">Kevin Cr</a></td></tr>
+<tr d-ix="8"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
+<tr d-ix="9"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>R 4.1 and above, 108 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>ọ3,5“¡Ṭ4“Ụp»ẋ&quot;Fȯ)Y
+</code></pre>
+<p>A full program that accepts a positive integer and prints the FizzFizzFizzBuzz sequence.</p>
+<p><strong><a href="https://tio.run/##y0rNyan8///h7l5jHdNHDXMOLXy4c40JkPFw95KCQ7sf7upWcjuxXjPy////RgYGAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<h4>How?</h4>
+<pre><code>ọ3,5“¡Ṭ4“Ụp»ẋ&quot;Fȯ)Y - Main Link: positive integer, N
+                )  - for each n in [1..N]:
+ 3,5               -   [3, 5]
+ọ                  -   {n} divisibility counts {[3,5]}
+    “¡Ṭ4“Ụp»       -   [&quot;Fizz&quot;, &quot;Buzz&quot;] (compressed list of lists of characters)
+            ẋ&quot;     -   zip {[&quot;Fizz&quot;, &quot;Buzz&quot;]} with repeat {divisibility counts}
+              F    -   flatten
+               ȯ   -   logical OR {n} 
+                 Y - join with newline characters
+                   - implicit, smashing print
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>R 4.1 and above, 108 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>f=\(x)p(a(1:x,1:x),&quot;\n&quot;);p=paste0;i=ifelse;a=\(x,y)i(x%%3,i(x%%5,y,p(&quot;Buzz&quot;,a(x/5,&quot;&quot;))),p(&quot;Fizz&quot;,a(x/3,&quot;&quot;)))
 </code></pre>
 <p>This is a function, to call and print you need</p>
@@ -45,7 +64,7 @@
 <p><a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWN3PSbGM0KjQLNBI1DK0qdIBYU0cpJk9J07rAtiCxuCTVwDrTNjMtNac41ToRpFSnUjNTo0JV1VgHTJnqVOoUaCg5lVZVKekkalTom-ooKWlqaoIE3TJhgsYQQYidm5ITSzTSNIwMDDR1ilMLbIFSEAmYowA" rel="nofollow noreferrer">Attempt it online</a></p>
 <p>8 bytes can be removed if just returning an array of strings without newlines is OK <a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWN1PSbGM0KjQTNQytKnSAWNO6wLYgsbgk1cA60zYzLTWnONU6EaREp1IzU6NCVdVYB0yZ6lTqFGgoOZVWVSnpJGpU6JvqKClpamqCBN0yYYLGEEGIXVuSE0s00jSMDAw0dYpTC2yVYvKUoFIw5wAA" rel="nofollow noreferrer">ATO</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 137 bytes (just function)</h1>
+<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 137 bytes (just function)</h1>
 <pre><code>f(N){int i,j;while(i&lt;N){j=i+1;while(j%3&lt;1){printf(&quot;Fizz&quot;);j/=3;}while(j%5&lt;1){printf(&quot;Buzz&quot;);j/=5;}if(i++&lt;j)printf(&quot;%d&quot;,j);puts(&quot;&quot;);}}
 </code></pre>
 <h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 153 bytes</h1>
@@ -54,7 +73,7 @@
 </code></pre>
 <p><a href="https://tio.run/##TcpBCsIwEEDRq5RAYYZUbC1dTbpx4dI7SGp0Bq1FW4WGnD1mYcDt/89uLtbG6OCInse54Eroc@XbGdikJD3r5hekbE2Dfnom50AdeF0Vkmz7lkIW3b/YL1l0FNgBa20E8y0HVQnStMwvUImF8H7wUNxPPAJ6B7u6TjHGLw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 96 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 96 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:n and[f(n-1),print(g(n,3)*'Fizz'+g(n,5)*'Buzz'or n)]
 g=lambda i,d:i%d&lt;1and-~g(i//d,d)
@@ -69,13 +88,13 @@ g=lambda i,d:i%d&lt;1and-~g(i//d,d)
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/6fZhvzPycxNyklUSHPKl0jT8dYU0vdLbOqSl0bxDMF8pxKgbz8IoU8rnRbqNJMnRSrTNUUG8PEvBTdunSNTH39FJ0Uzf9pIGUKmXkKRYl56akahjpGBoaaVlwKCgVFmXklQPMU0jTyNDX/AwA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1>APL+WIN, 79 bytes.</h1>
+<div id="pu4" class="pu"><h1>APL+WIN, 79 bytes.</h1>
 <p>Prompts for integer n</p>
 <pre><code>i←1⋄n←⎕⋄⍎∊n⍴⊂'((0=⍴t)↑i),t←∊(∊+/0=1|i÷(⊂3 5)*¨⍳⌈i*.5)/''Fizz'' ''Buzz''⋄i←i+1⋄'
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tfyaI@ai7JQ9IA6WArEe9fY86uvIe9W551NWkrqFhYAtklmg@apuYqalTAlLW0aUBxNr6BraGNZmHt2sA1RkrmGpqHVrxqHfzo56OTC09U019dXW3zKoqdXUFdXWnUhADaDbItkxtkH3q/4HWc/1P4zI0AAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 31 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 31 bytes</h1>
 <pre><code>ＥＮ∨ΣＥ⪪FiBu²×⁺λzz⌕Ｘ⁰⮌↨⊕ι⁺³⊗μ⁰Ｉ⊕ι
 </code></pre>
 <p><a href="https://tio.run/##XYtNCoMwFISvErJ6Qgqi3XVni@DCNtReIMYHDSRR8mPBy6fR7jqLGZiZT76Fk7PQKXGnbIBeLNDZJYZ7NCM6KBh5OBiiOZZh0SoAbVUTKSNVHl/KoAeuowfNCN02mstW2Qn4/Ml8ycgTV3QeoRHZOisdGrQBJ1D5epA1I7c5jjp3ptjFSPmLq/Dhj9l1Sak61@m06i8" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -108,7 +127,7 @@ g=lambda i,d:i%d&lt;1and-~g(i//d,d)
                                 Implicitly print
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> <code>-E</code>, 87 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> <code>-E</code>, 87 bytes</h1>
 <p>This one takes empty lines as input for the number of lines to output. It outputs numbers as unary (if not Fizz or Buzz):</p>
 <pre><code>G
 h
@@ -124,7 +143,7 @@ s/zx+/z/
 <p><a href="https://tio.run/##K05N0U3PK/3/350rg6tSPyZPv0Kfy8qQq1hfI66mSlOjQlszxijGSEU/xtAts6oqxkifq8SQy8oIVUG1SS1IhVMpVAVIuqpCW79K//9/LjTwL7@gJDM/r/i/risA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
 <p>It could be optimised down to <a href="https://#%20%5Bsed%5D,%2081%20bytes%20%20%20%20%20%20G%20%20%20%20%20h%20%20%20%20%20y/%5Cn/x/%20%20%20%20%20:1%20%20%20%20%20s/(%5E%7Cz)(x+)%5C2%5C2$/%5C1Fizz%5C2/%20%20%20%20%20s/(%5E%7Cz)(x+)%5C2%7B4%7D$/%5C1Buzz%5C2/%20%20%20%20%20t1%20%20%20%20%20s/zx+/z/%20%20%5BTry%20it%20online!%5D%5BTIO-lutoydo7%5D%20%20%5Bsed%5D:%20https://www.gnu.org/software/sed/%20%5BTIO-lutoydo7%5D:%20https://tio.run/##K05N0U3PK/3/350rg6tSPyZPv0Kfy8qQq1hfI66mSlOjQlszxijGSEU/xtAts6oqxkgfVarapBYk51QKkSsB6ayq0Nav0v//n4sU8C@/oCQzP6/4v64rAA" rel="nofollow noreferrer" title="sed – Try It Online">81 bytes</a>, if <code>FizzBuzzFizz</code> would be allowed for 45 and the like.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>27</s> 26 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>27</s> 26 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ENDÓ0Þ«2Lè”FizzÒÖ”#×JD?`þ,
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f/f1c/l8GSDw/MOrTbyObziUcNct8yqqsOTDk8DMpUPT/dysU84vE/n/38jAwMA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -157,13 +176,13 @@ s/zx+/z/
 <li>The <code>END...D?`þ,</code> is to print the number if the <code>J</code> results in an empty string <code>&quot;&quot;</code> and print the string otherwise. An alternative that's 1 byte shorter would be <code>EN...N‚éθ,</code> or <code>END...‚éθ,</code>, but unfortunately those are limited to <span class="math-container">\$n\leq1001\$</span> and <span class="math-container">\$n\leq10001\$</span> respectively.</li>
 </ol>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.javascript.com" rel="nofollow noreferrer">JavaScript</a>, 81 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.javascript.com" rel="nofollow noreferrer">JavaScript</a>, 81 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&amp;&amp;f(n-1)+(g=s=&gt;h=(d,q=n/d)=&gt;q%1?'':s+h(d,q/d),g`Fizz`(3)+g`Buzz`(5)||n)+`
 `
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWNwPTbPNs7fLU1NI08nQNNbU10m2Lbe0ybDVSdApt8_RTNG3tClUN7dXVrYq1M0CCQCGd9AS3zKqqBA1jTe30BKdSENNUs6YmT1M7gSsBYvBWruT8vOL8nFS9nPx0jTQNQwMDTU1riBzMcgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a> <code>j</code>, 74 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 9.25 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a> <code>j</code>, 74 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 9.25 bytes</h1>
 <pre><code>ƛ35fǑkF½*∑∴
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIsabMzVmx5FrRsK9KuKIkeKItCIsIiIsIjIwMCJd" rel="noreferrer">Try it Online!</a></p>
