--- a/q/272452.html
+++ b/q/272452.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>097</td><td>R 4.1 and above</td><td>240410T113250Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272474#272474">Martin M</a></td></tr>
-<tr d-ix="1"><td>018</td><td>Jelly</td><td>240410T132624Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272476#272476">Jonathan</a></td></tr>
-<tr d-ix="2"><td>137</td><td>C gcc</td><td>240410T122625Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272475#272475">virolino</a></td></tr>
+<tr d-ix="0"><td>137</td><td>C gcc</td><td>240410T122625Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272475#272475">virolino</a></td></tr>
+<tr d-ix="1"><td>097</td><td>R 4.1 and above</td><td>240410T113250Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272474#272474">Martin M</a></td></tr>
+<tr d-ix="2"><td>018</td><td>Jelly</td><td>240410T132624Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272476#272476">Jonathan</a></td></tr>
 <tr d-ix="3"><td>096</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
 <tr d-ix="4"><td>079</td><td>APL+WIN</td><td>240410T110718Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272471#272471">Graham</a></td></tr>
 <tr d-ix="5"><td>031</td><td>Charcoal</td><td>240410T112504Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272473#272473">Neil</a></td></tr>
@@ -37,7 +37,17 @@
 <tr d-ix="8"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
 <tr d-ix="9"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>R 4.1 and above, <strike>108</strike> 97  bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 137 bytes (just function)</h1>
+
+<pre class="lang-c prettyprint-override"><code>f(N){int i,j;while(i&lt;N){j=i+1;while(j%3&lt;1){printf(&quot;Fizz&quot;);j/=3;}while(j%5&lt;1){printf(&quot;Buzz&quot;);j/=5;}if(i++&lt;j)printf(&quot;%d&quot;,j);puts(&quot;&quot;);}}
+</code></pre>
+<h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 153 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>f(N){int i,j;while(i&lt;N){j=i+1;while(j%3&lt;1){printf(&quot;Fizz&quot;);j/=3;}while(j%5&lt;1){printf(&quot;Buzz&quot;);j/=5;}if(i++&lt;j)printf(&quot;%d&quot;,j);puts(&quot;&quot;);}}void main(){f(200);}
+</code></pre>
+<p><a href="https://tio.run/##TcpBCsIwEEDRq5RAYYZUbC1dTbpx4dI7SGp0Bq1FW4WGnD1mYcDt/89uLtbG6OCInse54Eroc@XbGdikJD3r5hekbE2Dfnom50AdeF0Vkmz7lkIW3b/YL1l0FNgBa20E8y0HVQnStMwvUImF8H7wUNxPPAJ6B7u6TjHGLw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>R 4.1 and above, <strike>108</strike> 97  bytes</h1>
 <pre class="lang-r prettyprint-override"><code>`&lt;`=paste0
 f=\(x)a(1:x,1:x)&lt;&quot;
 &quot;
@@ -50,7 +60,7 @@ a=\(x,y=&quot;&quot;)i(x%%3,i(x%%5,y,&quot;Buzz&quot;&lt;a(x/5)),&quot;Fizz&quot
 <p><a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWNxMTbBJsCxKLS1INuNJsYzQqNBM1DK0qdIBY00aJS4kr0zYzLTWnOJUrESSrU2mrpKSZqVGhqmqsA6ZMdSp1lJxKq6qUbBI1KvRNNTV1lNwyYVxjTU2IRZuSE0s00jSMDAw0dYpTC0CmQCRgLgEA" rel="nofollow noreferrer">Attempt it online</a></p>
 <p>4 bytes can be removed if just returning an array of strings without newlines is OK (<a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWN2MTbBJsCxKLS1INuNJsYzQqNBM1DK0qdIBYkyvTNjMtNac4lSsRJKNTaaukpJmpUaGqaqwDpkx1KnWUnEqrqpRsEjUq9E01NXWU3DJhXGNNTYglW5ITSzTSNIwMDDR1ilMLbJVi8pSgUjB3AAA" rel="nofollow noreferrer">ATO</a>).</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ọ3,5“¡Ṭ4“Ụp»ẋ&quot;Fȯ)Y
 </code></pre>
 <p>A full program that accepts a positive integer and prints the FizzFizzFizzBuzz sequence.</p>
@@ -67,15 +77,6 @@ a=\(x,y=&quot;&quot;)i(x%%3,i(x%%5,y,&quot;Buzz&quot;&lt;a(x/5)),&quot;Fizz&quot
                  Y - join with newline characters
                    - implicit, smashing print
 </code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 137 bytes (just function)</h1>
-<pre><code>f(N){int i,j;while(i&lt;N){j=i+1;while(j%3&lt;1){printf(&quot;Fizz&quot;);j/=3;}while(j%5&lt;1){printf(&quot;Buzz&quot;);j/=5;}if(i++&lt;j)printf(&quot;%d&quot;,j);puts(&quot;&quot;);}}
-</code></pre>
-<h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 153 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>f(N){int i,j;while(i&lt;N){j=i+1;while(j%3&lt;1){printf(&quot;Fizz&quot;);j/=3;}while(j%5&lt;1){printf(&quot;Buzz&quot;);j/=5;}if(i++&lt;j)printf(&quot;%d&quot;,j);puts(&quot;&quot;);}}void main(){f(200);}
-</code></pre>
-<p><a href="https://tio.run/##TcpBCsIwEEDRq5RAYYZUbC1dTbpx4dI7SGp0Bq1FW4WGnD1mYcDt/89uLtbG6OCInse54Eroc@XbGdikJD3r5hekbE2Dfnom50AdeF0Vkmz7lkIW3b/YL1l0FNgBa20E8y0HVQnStMwvUImF8H7wUNxPPAJ6B7u6TjHGLw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 96 bytes</h1>
 
