--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240410T152020Z
+"   /golfscore                                      20240410T152533Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/18633.html">Print a sinusoidal wave (vertically)            : 0018633</a>
 <a href="q/272452.html">FizzFizzFizzBuzz!                               : 0272452</a>
 <a href="q/272425.html">Fixed Repeating Output                          : 0272425</a>
 <a href="q/193170.html">1 2 4 8 16 ... 33?                              : 0193170</a>
