--- a/q/49781.html
+++ b/q/49781.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>035</td><td>Uiua</td><td>240408T143910Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/272414#272414">noodle m</a></td></tr>
+<tr d-ix="0"><td>034</td><td>Uiua</td><td>240408T143910Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/272414#272414">noodle m</a></td></tr>
 <tr d-ix="1"><td>020</td><td>Vyxal</td><td>240406T003524Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/272371#272371">emanresu</a></td></tr>
 <tr d-ix="2"><td>080</td><td>Haskell</td><td>210621T152620Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/230214#230214">Lynn</a></td></tr>
 <tr d-ix="3"><td>025</td><td>Japt</td><td>190125T231554Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/179124#179124">Shaggy</a></td></tr>
@@ -68,14 +68,15 @@
 <tr d-ix="39"><td>038</td><td>CJam</td><td>150507T212327Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/49784#49784">Optimize</a></td></tr>
 <tr d-ix="40"><td>052</td><td>Pyth</td><td>150507T211009Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/49782#49782">Maltysen</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, <s>46</s> <s>44</s> <s>42</s> <s>40</s> <s>39</s> <s>38</s> 35 bytes</h1>
+<div id="pu0" class="pu"><h1>Uiua, <s>46 44 … 35</s> 34 bytes</h1>
 <p><sup><a href="https://codegolf.stackexchange.com/a/256052/108687">crossed out 44 is still regular 44 :(</a></sup></p>
-<pre><code>⊏↧5/◇+\+{⇌.⊞=.⊙⟜¤⟜=}⇡+1×2.:$  |-\/O
+<pre><code>⊏↧5/◇+\+{⇌,¤,⊞=.⟜=}⇡+1×2.:$  -\|/O
 </code></pre>
-<p><a href="https://uiua.org/pad?src=0_10_2__RiDihpAg4oqP4oanNS_il4crXCt74oeMLuKKnj0u4oqZ4p-cwqTin5w9feKHoSsxw5cyLjokICB8LVwvTwoK4omhKCZwIiLiiaEmcEYmcC4p4oehNAo=" rel="nofollow noreferrer">Try it!</a> I submitted this on the day of the 2024 solar eclipse, which is fitting for a challenge about the sun. (Edit - the eclipse was beautiful! I saw it at around 85%-90% coverage)</p>
+<p><a href="https://uiua.org/pad?src=0_10_3__RiDihpAg4oqP4oanNS_il4crXCt74oeMLMKkLOKKnj0u4p-cPX3ih6ErMcOXMi46JCAgLVx8L08KCuKJoSgmcCIi4omhJnBGJnAuKeKHoTQK" rel="nofollow noreferrer">Try it!</a> I submitted this on the day of the 2024 solar eclipse, which is fitting for a challenge about the sun. (Edit - the eclipse was beautiful! I saw it at around 85%-90% coverage)</p>
 <p>Certainly my most well-golfed Uiua submission to-date. I have had a lot of different ideas and methods to save bytes and frequently switched much of the approach around a lot, but finally I have this at a state where I'd be happy if I don't find anything more.</p>
 <p>Omnikar's very clever idea in the Uiua discord to use <code>/+\+</code> instead of multiplying each term by a different factor helped me save 3 bytes! 38 → 35</p>
-<p>Explanation:</p>
+<h2>Explanation:</h2>
+<p>Note: This explanation is very slightly outdated, but the strategy is the same, just a few things shifted around.</p>
 <p>Consider the input 3. We double this and add 1 to get the side length 7, and take the range from 0 up to it.</p>
 <pre><code>[0 1 2 3 4 5 6]
 </code></pre>
