--- a/q/51323.html
+++ b/q/51323.html
@@ -66,11 +66,16 @@ s/.*/wc -L&lt;&lt;&lt;'&amp;'/e         #the above if you're using spaces as you
 s/.*/echo &amp;|wc -L/e        #shells that don't support &lt;&lt;&lt; redirects
 s/.*/echo '&amp;'|wc -L/e      # + using spaces
 </code></pre>
-<p>these send all the chars to <code>wc</code> which returns the longest line with <code>-L</code> (the <code>&lt;&lt;&lt;</code> redirect and <code>echo</code> add a newline to the end). the unary must consist of the entire line; swapping less than the full line seems to give unexpected results</p>
-<h3>addition (-E)</h3>
-<pre><code>s/(.*) (.*)/echo $((\1+\2))/e   #two numbers seperated by a space
+<p>these send all the chars to <code>wc</code> which returns the longest line with <code>-L</code> (the <code>&lt;&lt;&lt;</code> redirect and <code>echo</code> add a newline to the end). the unary must consist of the entire line; as it runs the text of the full line after the swap, so if you leave something out you end up trying to run <code>lorem ipsumwc -L&lt;&lt;&lt;'   '</code></p>
+<h3>basic math (-E)</h3>
+<pre><code>s/(.*) (.*)/echo $[\1+\2]/e   #two numbers seperated by a space
+s/(.*) (.*)/echo $[\1*\2]/e   #there's at least + - * / %
 </code></pre>
-<p><a href="https://tio.run/##K05N0U3PK/3/v1hfQ09LUwFE6KcmZ@QrqGhoxBhqxxhpAvn//xsrmHCZGCgYcRkZGVsYKJhbWhib/MsvKMnMzyv@r@sKAA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##K05N0U3PK/3/v1hfQ09LUwFE6KcmZ@QrqETHGGrHGMXqp/7/b6xgwmVioGDEZWRkbGGgYG5pYWzyL7@gJDM/r/i/risA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
+<h3>idk, go have fun</h3>
+<pre><code>s/.*/for i in {1..&amp;};{ echo $[&amp;%$i];}/e
+</code></pre>
+<p>basically if a shell solution is a lot shorter than a sed solution it doesn't need to be that way</p>
 </div>
 <div id="pu1" class="pu"><p>Okay, here's a weird functioning of (GNU) sed's regex. For example, if the pattern space is only <code>qqq</code>, then the extended regex <code>s/^|q|$/&lt;&amp;&gt;/g</code> gives <code>&lt;q&gt;&lt;q&gt;&lt;q&gt;</code>. <a href="https://tio.run/##K05N@f@/WD@uprBGRd9GzU4//f//wsLCf/kFJZn5ecX/dYsA" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 <p>I'm not sure, but I think it is because if a character matches, then do the empty strings surrounding it. So because the terminal <code>q</code> matches, the match also includes the end of the pattern space, so <code>$</code> by itself doesn't get matched because otherwise it would overlap with the previous match (and likewise for <code>^</code> and even I think for word boundaries and the like).</p>
