--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240410T185418Z
+"   /golfscore                                      20240410T185620Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/196014.html">Substitute Unprintable ASCII Characters         : 0196014</a>
 <a href="q/18633.html">Print a sinusoidal wave (vertically)            : 0018633</a>
 <a href="q/51323.html">Tips for golfing in sed                         : 0051323</a>
 <a href="q/49781.html">Extendify the ASCII Sun                         : 0049781</a>
