--- a/q/272425.html
+++ b/q/272425.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>689</td><td>C++</td><td>240409T145117Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272437#272437">Someone</a></td></tr>
-<tr d-ix="1"><td>010</td><td>*><></td><td>240410T153439Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272481#272481">Bee H.</a></td></tr>
-<tr d-ix="2"><td>020</td><td>Octave / MATLAB</td><td>240410T144650Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272478#272478">Luis Men</a></td></tr>
+<tr d-ix="0"><td>019</td><td>Octave</td><td>240410T144650Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272478#272478">Luis Men</a></td></tr>
+<tr d-ix="1"><td>689</td><td>C++</td><td>240409T145117Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272437#272437">Someone</a></td></tr>
+<tr d-ix="2"><td>010</td><td>*><></td><td>240410T153439Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272481#272481">Bee H.</a></td></tr>
 <tr d-ix="3"><td>025</td><td>JavaScript Node.js</td><td>240410T002259Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272455#272455">2pichar</a></td></tr>
 <tr d-ix="4"><td>025</td><td>Brainfuck</td><td>240409T141233Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272436#272436">matteo_c</a></td></tr>
 <tr d-ix="5"><td>002</td><td>05AB1E</td><td>240409T124407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272427#272427">Kevin Cr</a></td></tr>
@@ -56,7 +56,13 @@
 <tr d-ix="27"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
 <tr d-ix="28"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://ato.pxeger.com/run?1=m702uSCntBiE49OTkxcsWFpakqZrcdNFOTO3IL-oxCYzv7ikKDUx144rNzEzTyMzr0QhWbM6Lb9Io7gkxcoqOTPPzi7Zui7ZWrOgtCQ5I7FIw8QyTjFZV1fTuhZiFtTIBQuNIQwA" rel="nofollow noreferrer">C++</a>, 68 bytes (-9 by ceilingcat, and -1 yet again by Mukundan314)</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/octave/" rel="nofollow noreferrer">Octave</a>, 19 bytes</h1>
+
+<pre class="lang-matlab prettyprint-override"><code>@(n)[~(1:n)+49 '0']
+</code></pre>
+<p><a href="https://tio.run/##y08uSSxL/Z9mq6en999BI08zuk7D0CpPU9vEUkHdQD32f0pmcYFGmoahpiYXlGmEYBprav4HAA" rel="nofollow noreferrer" title="Octave – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://ato.pxeger.com/run?1=m702uSCntBiE49OTkxcsWFpakqZrcdNFOTO3IL-oxCYzv7ikKDUx144rNzEzTyMzr0QhWbM6Lb9Io7gkxcoqOTPPzi7Zui7ZWrOgtCQ5I7FIw8QyTjFZV1fTuhZiFtTIBQuNIQwA" rel="nofollow noreferrer">C++</a>, 68 bytes (-9 by ceilingcat, and -1 yet again by Mukundan314)</h1>
 <pre><code>#import&lt;iostream&gt;
 main(int c){for(std::cin&gt;&gt;c;~c;)putchar(49^!c--);}
 </code></pre>
@@ -85,7 +91,7 @@ int main(){                                                   }  # ‎⁢Initiat
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/redstarcoder/go-starfish" rel="nofollow noreferrer">*&gt;&lt;&gt;</a>, 10 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/redstarcoder/go-starfish" rel="nofollow noreferrer">*&gt;&lt;&gt;</a>, 10 bytes</h1>
 <p>Uses the <code>-i</code> flag to pass in input.</p>
 <pre><code>:?1:n?!;1-
 </code></pre>
@@ -98,12 +104,6 @@ int main(){                                                   }  # ‎⁢Initiat
         1-  Subtract 1 from the top value
 </code></pre>
 <p><a href="https://tio.run/##Ky5JLErLLM74/9/K3tAqz17R2lD3//9/@QUlmfl5xf91M/@bAgA" rel="nofollow noreferrer" title="*&gt;&lt;&gt; – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/octave/" rel="nofollow noreferrer">Octave</a> / MATLAB, 20 bytes</h1>
-
-<pre class="lang-matlab prettyprint-override"><code>@(n)dec2bin(2^n*2-2)
-</code></pre>
-<p><a href="https://tio.run/##y08uSSxL/Z9mq6en999BI08zJTXZKCkzT8MoLk/LSNdI839KZnGBRpqGoaYmF5RphGAaa2r@BwA" rel="nofollow noreferrer" title="Octave – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>,  25 bytes</h1>
 <p>-2 bytes thanks to @DLosc</p>
