--- a/q/196014.html
+++ b/q/196014.html
@@ -41,7 +41,21 @@
 <pre><code>₃8Q8QṪ⸠~ᵃ$+Z₆v~!$;&amp;TO\ŀ
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#WyJSIiwiMTI3ek/huKIiLCLigoM4UThR4bmq4rigfuG1gyQrWuKChnZ+ISQ7JlRPXFzFgCIsIiIsIiIsIjMuNC4yIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
-<p>i tried</p>
+<p>i tried (header is just all the ascii characters [1,127])</p>
+<pre><code>₃8Q8QṪ⸠~ᵃ$+Z₆v~!$;&amp;TO\ŀ­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁢⁢⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁪‏‏​⁡⁠⁡‌⁢⁡​‎⁪⁪⁠‎⁪⁡⁪⁠⁪⁢⁡⁢⁪‏‏​⁡⁠⁡‌⁢⁢​‎‎⁪⁡⁪⁠⁪⁤⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁢⁪‏‏​⁡⁠⁡‌⁢⁣​‎‎⁪⁡⁪⁠⁪⁤⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁡⁪‏‏​⁡⁠⁡‌⁢⁤​‎⁪⁪⁠‎⁪⁡⁪⁠⁪⁢⁡⁣⁪‏‏​⁡⁠⁡‌⁣⁡​‎‎⁪⁡⁪⁠⁪⁢⁡⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁡⁪‏‏​⁡⁠⁡‌⁣⁢​‎‎⁪⁡⁪⁠⁪⁢⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁣⁪‏‏​⁡⁠⁡‌­
+₃                        # ‎⁡literal 32 (R flag treats this as a range)
+ 8Q8Q                    # ‎⁢remove at index 8 twice
+     Ṫ                   # ‎⁣remove 32
+      ⸠~ᵃ$+Z             # ‎⁤zip each number with itself plus 9216
+                 ;       # ‎⁢⁡pair
+            ₆v           # ‎⁢⁢literal 127
+              ~!$        # ‎⁢⁣compressed 9249
+                  &amp;      # ‎⁢⁤append that 
+                   TO    # ‎⁣⁡transpose, convert to characters
+                     \ŀ  # ‎⁣⁢transliterate
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="http://www.red-lang.org" rel="nofollow noreferrer">Red</a>, <s>94</s> 92 bytes</h1>
 
