--- a/q/272425.html
+++ b/q/272425.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>019</td><td>Octave</td><td>240410T144650Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272478#272478">Luis Men</a></td></tr>
+<tr d-ix="0"><td>019</td><td>Octave / MATLAB</td><td>240410T144650Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272478#272478">Luis Men</a></td></tr>
 <tr d-ix="1"><td>689</td><td>C++</td><td>240409T145117Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272437#272437">Someone</a></td></tr>
 <tr d-ix="2"><td>010</td><td>*><></td><td>240410T153439Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272481#272481">Bee H.</a></td></tr>
 <tr d-ix="3"><td>025</td><td>JavaScript Node.js</td><td>240410T002259Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272455#272455">2pichar</a></td></tr>
@@ -56,7 +56,7 @@
 <tr d-ix="27"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
 <tr d-ix="28"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/octave/" rel="nofollow noreferrer">Octave</a>, 19 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/octave/" rel="nofollow noreferrer">Octave</a> / MATLAB, <s>20</s> 19 bytes</h1>
 
 <pre class="lang-matlab prettyprint-override"><code>@(n)[~(1:n)+49 '0']
 </code></pre>
