--- a/q/71312.html
+++ b/q/71312.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>058</td><td>JavaScript Node.js</td><td>240410T063125Z</td><td><a href="https://codegolf.stackexchange.com/questions/71312/approximate-%e2%88%abex-xxdx/272463#272463">l4m2</a></td></tr>
-<tr d-ix="1"><td>617</td><td>TI‑BASIC</td><td>240410T000001Z</td><td><a href="https://codegolf.stackexchange.com/questions/71312/approximate-%e2%88%abex-xxdx/272454#272454">Kai Burg</a></td></tr>
+<tr d-ix="0"><td>622</td><td>TI‑BASIC</td><td>240410T000001Z</td><td><a href="https://codegolf.stackexchange.com/questions/71312/approximate-%e2%88%abex-xxdx/272454#272454">Kai Burg</a></td></tr>
+<tr d-ix="1"><td>058</td><td>JavaScript Node.js</td><td>240410T063125Z</td><td><a href="https://codegolf.stackexchange.com/questions/71312/approximate-%e2%88%abex-xxdx/272463#272463">l4m2</a></td></tr>
 <tr d-ix="2"><td>038</td><td>Julia</td><td>160206T230935Z</td><td><a href="https://codegolf.stackexchange.com/questions/71312/approximate-%e2%88%abex-xxdx/71314#71314">Alex A.</a></td></tr>
 <tr d-ix="3"><td>039</td><td>Vitsy</td><td>160220T185505Z</td><td><a href="https://codegolf.stackexchange.com/questions/71312/approximate-%e2%88%abex-xxdx/73696#73696">Addison </a></td></tr>
 <tr d-ix="4"><td>026</td><td>MATL</td><td>160207T045059Z</td><td><a href="https://codegolf.stackexchange.com/questions/71312/approximate-%e2%88%abex-xxdx/71331#71331">Luis Men</a></td></tr>
@@ -38,14 +38,7 @@
 <tr d-ix="9"><td>083</td><td>golflua</td><td>160207T032404Z</td><td><a href="https://codegolf.stackexchange.com/questions/71312/approximate-%e2%88%abex-xxdx/71327#71327">Kyle Kan</a></td></tr>
 <tr d-ix="10"><td>078</td><td>ES7</td><td>160207T005444Z</td><td><a href="https://codegolf.stackexchange.com/questions/71312/approximate-%e2%88%abex-xxdx/71318#71318">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>f=(b,a=0)=&gt;b&lt;1e-5?(Math.E/a)**a*b:a&lt;99&amp;&amp;f(b/=2,a)+f(b,a+b)
-</code></pre>
-<p><a href="https://tio.run/##dcxJDoIwAIXhPadgRVqGjlRaQ3Xl0kO0SB1CqBHi9WvVsJDEf/29dzNPM3WP632uRn/qQ3Aa2NJoAvXOtrSvxB4czXxBB2xgnpvcbk2rVJY5YLFmpYGFew8KC0Pnx8kPPRr8GThAIUy/YZwyRCVrePJLBFlMJBvElZJ0RSiJfdRfwlATz2VEkQgkJKnJinBEayrUQhRjTAaa8Bc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>binary operation to avoid stack overflow</p>
-</div>
-<div id="pu1" class="pu"><h2>TI‑BASIC, 617 B</h2>
+<div id="pu0" class="pu"><h2>TI‑BASIC, 622 B</h2>
 <p>Picking up <a href="/q/71312/#comment174645_71312">Lirtosiast’s informal bounty</a> let’s kick things off with an implementation setting an upper limit with respect to byte count.
 TI‑BASIC as a primarily interpreted language is terribly slow.
 The built‑in <code>fnInt(𝑒^X/X^X,X,0,I,ᴇ−4)</code> uses <a href="https://MaThWoRlD.WolFraM.cOm/Gauss-KronrodQuadrature.html" rel="nofollow noreferrer">Gauß–Kronrod integration</a>.
@@ -75,7 +68,7 @@ Note, I have not <em>mathematically verified</em> that the error does not exceed
 :L₆(L+1→A
 :L∕9→L
 :I−L→W
-:.5sum Y₁({L,I→S
+:.5sum Y₁({I,max(L,ᴇ−9→S
 :400⁻¹(−1)^(W&lt;0→D
 :1→N
 :For(X,L+D,I−D,D
@@ -268,6 +261,13 @@ Consult the original source code for understanding the above translation.</p>
     end.
 </code></pre>
 <p><a href="https://RosettaCode.org/wiki/Numerical_integration#Pascal" rel="nofollow noreferrer">RosettaCode numerical integration</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=(b,a=0)=&gt;b&lt;1e-5?(Math.E/a)**a*b:a&lt;99&amp;&amp;f(b/=2,a)+f(b,a+b)
+</code></pre>
+<p><a href="https://tio.run/##dcxJDoIwAIXhPadgRVqGjlRaQ3Xl0kO0SB1CqBHi9WvVsJDEf/29dzNPM3WP632uRn/qQ3Aa2NJoAvXOtrSvxB4czXxBB2xgnpvcbk2rVJY5YLFmpYGFew8KC0Pnx8kPPRr8GThAIUy/YZwyRCVrePJLBFlMJBvElZJ0RSiJfdRfwlATz2VEkQgkJKnJinBEayrUQhRjTAaa8Bc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>binary operation to avoid stack overflow</p>
 </div>
 <div id="pu2" class="pu"><h1>Julia, <s>79</s> <s>77</s> 38 bytes</h1>
 
