--- a/q/237206.html
+++ b/q/237206.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>036</td><td>Wolfram Language Mathematica</td><td>211113T065523Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237258#237258">att</a></td></tr>
-<tr d-ix="1"><td>036</td><td>Pip x</td><td>211112T153106Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237229#237229">DLosc</a></td></tr>
+<tr d-ix="0"><td>032</td><td>Pip x</td><td>211112T153106Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237229#237229">DLosc</a></td></tr>
+<tr d-ix="1"><td>036</td><td>Wolfram Language Mathematica</td><td>211113T065523Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237258#237258">att</a></td></tr>
 <tr d-ix="2"><td>057</td><td>Perl 5 + M5.10.0 a</td><td>211114T090929Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237286#237286">Dom Hast</a></td></tr>
 <tr d-ix="3"><td>063</td><td>C clang</td><td>211112T171439Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237236#237236">AZTECCO</a></td></tr>
 <tr d-ix="4"><td>042</td><td>Haskell</td><td>211113T043326Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237256#237256">xnor</a></td></tr>
@@ -45,39 +45,38 @@
 <tr d-ix="16"><td>045</td><td>JavaScript ES6</td><td>211112T101054Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237214#237214">Arnauld</a></td></tr>
 <tr d-ix="17"><td>059</td><td>Python 2</td><td>211112T094219Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237211#237211">xnor</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>44</s> 36 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a> <code>-x</code>, <s>36</s> 32 bytes</h1>
+<pre><code>Y_&gt;bFNa#y-:$/([bMXy]-N:_&lt;bFNa)|1
+</code></pre>
+<p>Takes the array and the number as command-line arguments. <a href="https://ato.pxeger.com/run?1=m724ILNgWbSSboVS7IKlpSVpuhY3FSLj7ZLc_BKVK3WtVPQ1opN8Iypjdf2s4m1Aopo1hhB1UOU7opWiDa2NrU2tza0trA0NrA2NYpV0FMxgxgEA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h3>Explanation</h3>
+<pre><code>Y_&gt;bFNa#y-:$/([bMXy]-N:_&lt;bFNa)|1
+      a                           The input array
+    FN                            Filter for elements that are not
+ _&gt;b                              Greater than the input number
+Y                                 Yank that list into y
+
+                          FNa     Filter input array for elements that are not
+                       _&lt;b        Less than the input number
+                     N:           Minimum such element
+              [    ]-             Subtract from each of these:
+               b                  Input number
+                MXy               Max of y (elements &lt;= b)
+                                  We now have a list containing two distances:
+                                  from the first element larger than b to b,
+                                  and to the last element smaller than b
+           $/(               )    Divide the first by the second
+                              |1  If the result was 0 or division by 0,
+                                  substitute 1 instead
+         -:                       Subtract that result from
+       #y                         Length of y (elements &lt;= b)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>44</s> 36 bytes</h1>
 <pre><code>Tr@Clip[Ramp[#2-#]/({##2&amp;@@#,0}-#)]&amp;
 </code></pre>
 <p><a href="https://tio.run/##dY3NCoJAFIX3PkVwQQquNH@hLYqBXiCsnbgYZEQhRUzaDOOrTyMJudDFtzjn457bqKHSjRrqQrny4p69vL3qLktV02XAIsiPewPAQikBiY3gkIfu3tftkEF0LaVM9Uf3by0hD8dHodrRBEYw9FiLgWECJ@Y0iX/aUTQUOZ4wxgQpQTr38XpP2XrP@XKVk2XaODlvfUi8IASZR3gSQn4zW0KsisC6Lw" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Input <code>[A, t]</code>. Returns 0-indexed.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a> <code>-x</code>, 36 bytes</h1>
-<pre><code>Yb&gt;=_FIa#y-:$/(-[bMXy]+MN:b&lt;=_FIa)|1
-</code></pre>
-<p>Takes the array and the number as command-line arguments. <a href="https://ato.pxeger.com/run?1=m724ILNgWbSSboVS7IKlpSVpuhY3VSKT7Gzj3TwTlSt1rVT0NXSjk3wjKmO1ff2skmzAEpo1hhC1UC07opWiDa2NrU2tza0trA0NrA2NYpV0FMxhRgIA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<h3>Explanation</h3>
-<pre><code>Yb&gt;=_FIa#y-:$/(-[bMXy]+MN:b&lt;=_FIa)|1
-       a                              Input array
-     FI                               Filter for elements where
- b&gt;=_                                 Input number is greater or equal
-Y                                     Yank that list into y
-
-                              FIa     Filter input array for elements where
-                          b&lt;=_        Input number is less or equal
-                       MN:            Minimum such element
-                      +               Plus
-               -[    ]                Negative of each of these:
-                 b                      Input number
-                  MXy                   Max of y (elements &lt;= b)
-                                      We now have a list containing two distances:
-                                      from the first element larger than b to b,
-                                      and to the last element smaller than b
-            $/(                  )    Divide the first by the second
-                                  |1  If the result was 0 or division by 0,
-                                      substitute 1 instead
-          -:                          Subtract that result from
-        #y                            Length of y (elements &lt;= b)
-</code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-M5.10.0 -a</code>, 57 bytes</h1>
 
