--- a/q/263121.html
+++ b/q/263121.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::263121</title>
+    <title>cg::QNNN</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,6 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
+  <!-- TXXX -->
 <tr d-ix="0"><td>066</td><td>Pure Bash  no external utilities</td><td>230722T185540Z</td><td><a href="https://codegolf.stackexchange.com/questions/263121/generate-the-crystal-maze-time-matrix/263187#263187">Digital </a></td></tr>
 <tr d-ix="1"><td>077</td><td>Ruby</td><td>230722T193338Z</td><td><a href="https://codegolf.stackexchange.com/questions/263121/generate-the-crystal-maze-time-matrix/263190#263190">Level Ri</a></td></tr>
 <tr d-ix="2"><td>267</td><td>SQL</td><td>230724T173936Z</td><td><a href="https://codegolf.stackexchange.com/questions/263121/generate-the-crystal-maze-time-matrix/263267#263267">0V32F10W</a></td></tr>
@@ -425,6 +426,7 @@ x-- ?                    // if x is not 0 (decrement it afterwards):
              # Implicit output, joined on newlines
 </code></pre>
 </div>
+<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
@@ -441,7 +443,7 @@ x-- ?                    // if x is not 0 (decrement it afterwards):
 
 
   <div class="footer">
-      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/263121/">263121</a></b>
+      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/QNNN/">QNNN</a></b>
   </div>
 <div class="footer-space">&nbsp;</div>
 
