--- a/q/237206.html
+++ b/q/237206.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>084</td><td>PowerShell Core</td><td>240411T010343Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/272486#272486">Julian</a></td></tr>
-<tr d-ix="1"><td>035</td><td>Wolfram Language Mathematica</td><td>211113T065523Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237258#237258">att</a></td></tr>
+<tr d-ix="0"><td>035</td><td>Wolfram Language Mathematica</td><td>211113T065523Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237258#237258">att</a></td></tr>
+<tr d-ix="1"><td>084</td><td>PowerShell Core</td><td>240411T010343Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/272486#272486">Julian</a></td></tr>
 <tr d-ix="2"><td>032</td><td>Pip x</td><td>211112T153106Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237229#237229">DLosc</a></td></tr>
 <tr d-ix="3"><td>057</td><td>Perl 5 + M5.10.0 a</td><td>211114T090929Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237286#237286">Dom Hast</a></td></tr>
 <tr d-ix="4"><td>063</td><td>C clang</td><td>211112T171439Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237236#237236">AZTECCO</a></td></tr>
@@ -46,7 +46,19 @@
 <tr d-ix="17"><td>045</td><td>JavaScript ES6</td><td>211112T101054Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237214#237214">Arnauld</a></td></tr>
 <tr d-ix="18"><td>059</td><td>Python 2</td><td>211112T094219Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237211#237211">xnor</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 84 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>44</s> <s>36</s> 35 bytes</h1>
+<pre><code>Tr@Clip[Ramp[#2-#]/({##2&amp;@@#,}-#)]&amp;
+</code></pre>
+<p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7P6TIwTknsyA6KDG3IFrZSFc5Vl@jWlnZSM3BQVmnVldZM1btf0BRZl5JtLKuXRpQMFatLjg5Ma@umqu62sSoVoeTkxNEAXlGJjoQASMTVD5U3lDHWMdUx1zHQsfQQMcQJGOIQ9wcl3o0i4yN0fgGODTicoAlRNzAQMcIiE2A2MLAAGyRBQ4ZI5wyJkAZrtr/AA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
+<p>Input <code>[A, t]</code>. Returns 0-indexed.</p>
+<pre><code>             #2-#                   amount t exceeds each value
+                  /({##2&amp;@@#,}-#)   / distance to next
+                            ,}        (last distance doesn't matter)
+   Clip[Ramp[    ]               ]  clamp to [0,1]
+Tr@                                 sum
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 84 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>$n,$a=$args
 for($p=0;$a[++$i]-le$n-and$a[$i]){$p=$i}$p+($n-$a[$p])/($a[$p+1]-$a[$p])
@@ -58,12 +70,6 @@ for($p=0;$a[++$i]-le$n-and$a[$i]){$p=$i}$p+($n-$a[$p])/($a[$p+1]-$a[$p])
 <p>Then calculate the index:</p>
 <pre class="lang-powershell prettyprint-override"><code>$p+($n-$a[$p])/($a[$p+1]-$a[$p])
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>44</s> <s>36</s> 35 bytes</h1>
-<pre><code>Tr@Clip[Ramp[#2-#]/({##2&amp;@@#,}-#)]&amp;
-</code></pre>
-<p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7P6TIwTknsyA6KDG3IFrZSFc5Vl@jWlnZSM3BQVmnVldZM1btf0BRZl5JtLKuXRpQMFatLjg5Ma@umqu62sSoVoeTkxNEAXlGJjoQASMTVD5U3lDHWMdUx1zHQsfQQMcQJGOIQ9wcl3o0i4yN0fgGODTicoAlRNzAQMcIiE2A2MLAAGyRBQ4ZI5wyJkAZrtr/AA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
-<p>Input <code>[A, t]</code>. Returns 0-indexed.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a> <code>-x</code>, <s>36</s> 32 bytes</h1>
 <pre><code>Y_&gt;bFNa#y-:$/([bMXy]-N:_&lt;bFNa)|1
