--- a/q/243337.html
+++ b/q/243337.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>Ruby</td><td>240411T033717Z</td><td><a href="https://codegolf.stackexchange.com/questions/243337/draw-a-battery-indicator/272487#272487">manatwor</a></td></tr>
-<tr d-ix="1"><td>092</td><td>R</td><td>240410T111937Z</td><td><a href="https://codegolf.stackexchange.com/questions/243337/draw-a-battery-indicator/272472#272472">Patric</a></td></tr>
+<tr d-ix="0"><td>082</td><td>R</td><td>240410T111937Z</td><td><a href="https://codegolf.stackexchange.com/questions/243337/draw-a-battery-indicator/272472#272472">Patric</a></td></tr>
+<tr d-ix="1"><td>043</td><td>Ruby</td><td>240411T033717Z</td><td><a href="https://codegolf.stackexchange.com/questions/243337/draw-a-battery-indicator/272487#272487">manatwor</a></td></tr>
 <tr d-ix="2"><td>087</td><td>Lua</td><td>220316T173911Z</td><td><a href="https://codegolf.stackexchange.com/questions/243337/draw-a-battery-indicator/244233#244233">twentysi</a></td></tr>
 <tr d-ix="3"><td>242</td><td>brainfuck</td><td>220224T202115Z</td><td><a href="https://codegolf.stackexchange.com/questions/243337/draw-a-battery-indicator/243350#243350">nununois</a></td></tr>
 <tr d-ix="4"><td>202</td><td>brainfuck</td><td>220301T150852Z</td><td><a href="https://codegolf.stackexchange.com/questions/243337/draw-a-battery-indicator/243536#243536">patchara</a></td></tr>
@@ -58,7 +58,15 @@
 <tr d-ix="29"><td>018</td><td>Vyxal</td><td>220224T185538Z</td><td><a href="https://codegolf.stackexchange.com/questions/243337/draw-a-battery-indicator/243341#243341">emanresu</a></td></tr>
 <tr d-ix="30"><td>086</td><td>Python 3</td><td>220224T183922Z</td><td><a href="https://codegolf.stackexchange.com/questions/243337/draw-a-battery-indicator/243339#243339">SegFault</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Ruby, 43 characters</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>92</s> 82 bytes</h1>
+<p>Inputs <code>L</code> and outputs the battery status to stdout.</p>
+<p>-10 bytes by changing the <code>rep</code> function alias and including 2* in the definition of L.
+(golfed by pajonk)</p>
+<pre class="lang-r prettyprint-override"><code>R=&quot;#&quot;;`?`=rep;cat(s&lt;-(R?12),&quot;\n&quot;,c(R,R?(L&lt;-2*scan()),&quot; &quot;?10-L,&quot;###\n&quot;)?3,s,sep=&quot;&quot;)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3g4JslZSVrBPsE2yLUguskxNLNIptdDWC7A2NNHWUYvKUdJI1gnSC7DV8bHSNtIqTE_M0NIESCkr2hga6PjpKysrKQEWa9sY6xTrFqQW2SkqaEJMXGkHoBQsgNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>Ruby, 43 characters</h1>
 <pre class="lang-ruby prettyprint-override"><code>-&gt;l{[s=?#*12,m='#%-10s###'%(?#*l*2),m,m,s]}
 </code></pre>
 <p>Sample run:</p>
@@ -70,12 +78,6 @@
 ############                                         
 </code></pre>
 <p><a href="https://tio.run/##KypNqvyfpmD7X9cupzq62NZeWcvQSCfXVl1ZVdfQoFhZWVldVQMomKNlpKmTC4TFsbX/C0pLihXSog1idYCkIZg0ApPGYNIETJrG/gcA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 92 bytes</h1>
-<p>Inputs <code>L</code> and outputs the battery status to stdout.</p>
-<pre class="lang-r prettyprint-override"><code>R=&quot;#&quot;;r=rep;cat(s&lt;-r(R,12),&quot;\n&quot;,r(c(R,r(R,2*(L&lt;-scan())),r(&quot; &quot;,10-L*2),&quot;###\n&quot;),3),s,sep=&quot;&quot;)
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=JY0xCoAwEAS_IpfmTi6gsRE0P7CytpGgpchFX2OTCD7K3xhJNewwsFeUcK_2OY9Vt-80WlDQiZVl79x8oO-14Mi1IYZpAxZ0af7KlDj02rt5QyJKCgrgutJD-bdKqZQTN8Se_bJbAMof0WSGkPkB" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.lua.org" rel="nofollow noreferrer">Lua</a>, 87 bytes</h1>
 <pre class="lang-lua prettyprint-override"><code>x,b=...,&quot;\n&quot;d=b.rep a=d(&quot;#&quot;,12)print(a..b..d(b.format(&quot;%-11s###\n&quot;,d(&quot;#&quot;,1+2*x)),3)..a)
