--- a/q/74809.html
+++ b/q/74809.html
@@ -53,6 +53,11 @@
 <p>But that works only on the strings with the same size. If the strings are of different length, than the shortest one is &quot;recycled&quot;, meaning that the missing elements are added from the beginning of the same vector. For example, strings <code>&quot;a.....b&quot;</code> and <code>&quot;..c.......&quot;</code> will be merged to <code>&quot;a.c...ba..&quot;</code> instead of <code>&quot;a.c...b...&quot;</code>.</p>
 <p>As far as I know, it is impossible to deactivate vector recycling in vector-operating functions like <code>Map</code>, <code>rbind</code>, <code>paste</code> etc. Luckily, I have noticed that <code>names</code> adds <code>NA</code>s to the end if the names vector is shorter than the host. Now that the shortest vector has the proper length, it could be passed to max function with <code>na.rm=TRUE</code> filter, which removes <code>NA</code>s.</p>
 <p>Finally, there is a statement <code>y=`if`((!b)&gt;!a,c(a,b),c(b,a))</code> which is choosing the shortest string and puts it to the first place, so that it will be properly converted with the <code>names</code> as shown above.</p>
+<p>Other <a href="https://codegolf.stackexchange.com/questions/4024/tips-for-golfing-in-r">notable tricks</a> used here:</p>
+<ul>
+<li><code>Reduce(paste0,x)</code>, 16 bytes instead of <code>paste0(x,collapse=&quot;&quot;)</code>, 21 bytes</li>
+<li><code>el(x)</code>, 5 bytes instead of <code>x[[1]]</code>, 6 bytes.</li>
+</ul>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 bytes</h1>
 
