--- a/q/74809.html
+++ b/q/74809.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>137</td><td>R</td><td>240411T120014Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/272495#272495">int 21h </a></td></tr>
+<tr d-ix="0"><td>126</td><td>R</td><td>240411T120014Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/272495#272495">int 21h </a></td></tr>
 <tr d-ix="1"><td>050</td><td>JavaScript Node.js</td><td>230108T103917Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/256480#256480">l4m2</a></td></tr>
 <tr d-ix="2"><td>076</td><td>C GCC</td><td>230108T193147Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/256493#256493">matteo_c</a></td></tr>
 <tr d-ix="3"><td>040</td><td>q/kdb+</td><td>170528T105948Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/123187#123187">mkst</a></td></tr>
@@ -45,10 +45,10 @@
 <tr d-ix="16"><td>009</td><td>CJam</td><td>160304T221955Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74810#74810">Martin E</a></td></tr>
 <tr d-ix="17"><td>011</td><td>Pyth</td><td>160304T222302Z</td><td><a href="https://codegolf.stackexchange.com/questions/74809/merging-two-strings/74812#74812">FryAmThe</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 137 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>\(a,b,`!`=nchar,y=`if`((!b)&gt;!a,c(a,b),c(b,a)),x=strsplit(y,&quot;&quot;))Reduce(paste0,Map(\(n,m)max(n,m,na.rm=T),names(Map(c,el(x),u&lt;-x[[2]])),u))
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>137</s> 126 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>\(a,b,`!`=nchar,y=`if`((!b)&gt;!a,c(a,b),c(b,a)),x=strsplit(y,&quot;&quot;))Reduce(paste0,Map(max,names(Map(c,el(x),u&lt;-x[[2]])),u,na.rm=T))
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=RY5BCsIwEEX33qJZzcBYxJWI8QZuxF1byDQmWGhLaVNIj-AZ3FTBQ3kbU1pxNu_zZvjM49mOLyvfvbPr3eeeAlNOKlKy1jduaZCqsAogyvEYMelpjQE5MSJ52bm2a8rCwUBCIJ7NtdcGGu6c2dCJG0ihpgor9hOp5rit5AVDqEwH04EmU4JH6g9rnyTbLAu9PeLy0N6C4DhMLkjEsQ5J4OonF69npUP866VhHGd-AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=RY5NCsIwEIX33qJZzcA0iCsR4w3ciLtayCSmWGhL6Q-kGy_ipgoeytuY0oqzeW--B4_3eDbjK1Pvvsvi7ed-ASZDOtKqsjduaFA6zzRAZPAQMdkpxiCGGJG8arumrYu8g4GEQDy5a28d1Nx2bk1HrqFkTxWXroXps-QK8Ej9PvZJsknTUNKHXDalOiMuK3YZCJbhjCAhpQ1O4OoHF25nZIP946VhHGf9Ag" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>My answer to this challenge is the largest one because R has default vector recycling. The code's key piece is the call <code>Map(max,a,b)</code>, where <code>a</code> and <code>b</code> are characters vectors. This outputs the list of characters with a larger value - similar to the other solutions here.</p>
 <p>But that works only on the strings with the same size. If the strings are of different length, than the shortest one is &quot;recycled&quot;, meaning that the missing elements are added from the beginning of the same vector. For example, strings <code>&quot;a.....b&quot;</code> and <code>&quot;..c.......&quot;</code> will be merged to <code>&quot;a.c...ba..&quot;</code> instead of <code>&quot;a.c...b...&quot;</code>.</p>
 <p>As far as I know, it is impossible to deactivate vector recycling in vector-operating functions like <code>Map</code>, <code>rbind</code>, <code>paste</code> etc. Luckily, I have noticed that <code>names</code> adds <code>NA</code>s to the end if the names vector is shorter than the host. Now that the shortest vector has the proper length, it could be passed to max function with <code>na.rm=TRUE</code> filter, which removes <code>NA</code>s.</p>
